add setData getData

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,10 +31,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/JavaApplication2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.gson-2.8.9.jar=C:\\Users\\Administrator\\Desktop\\gson-2.8.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.gson-2.8.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
