--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.gson-2.8.9.jar=C:\\Users\\Administrator\\Desktop\\gson-2.8.9.jar
 user.properties.file=C:\\Users\\Administrator\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
