--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -65,7 +65,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=javaapplication2.JavaApplication2
+main.class=info5100.container
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
