--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,11 +32,13 @@ dist.jar=${dist.dir}/JavaApplication2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.gson-2.8.9.jar=C:\\Users\\Administrator\\Desktop\\gson-2.8.9.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Administrator\\Desktop\\Li_Kun_001553201_Assign2\\libs\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.gson-2.8.9.jar}
+    ${file.reference.gson-2.8.9.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
